# face_kaoqin

./: README.md  local.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/jni/: CMakeLists.txt  yoloface.cpp  yoloface.h  yolofacencnn.cpp
app/src/main/res/drawable/: attendance_btn.xml  btn_2.xml  delete_btn.xml  dialog_new_course.xml  get_captcha_btn.xml  ic_calendar.xml  ic_email_fill.xml  ic_empty_box.xml  ic_join_in_course0.xml  ic_join_in_course1.xml  ic_kaoqin_chaxun.xml  ic_l.xml  ic_main_home.xml  ic_main_my.xml  ic_new_course.xml  ic_new_course2.xml  ic_password.xml  ic_qiandao.xml  ic_r.xml  ic_refresh.xml  ic_refresh2.xml  join_in_course_btn.xml  login_btn.xml  login_register_et.xml  new_course_btn.xml  refresh_btn.xml  student_main_bottom_navigation.xml  tv_blue_border.xml
app/src/main/res/layout/: activity_attendance.xml  activity_attendance_inquiry.xml  activity_delete_info.xml  activity_register.xml  activity_search_data.xml  activity_select.xml  activity_start.xml  activity_student__attendance_record.xml  activity_student_course.xml  activity_student_login.xml  activity_student_main.xml  activity_student_register.xml  activity_teacher_course.xml  activity_teacher_login.xml  activity_teacher_main.xml  activity_teacher_register.xml  dialog_create_course.xml  dialog_join_in_course.xml  dialog_start_attendance.xml  fragment_attendance_inquiry1.xml  fragment_attendance_inquiry2.xml  fragment_home.xml  fragment_home2.xml  fragment_mine.xml  fragment_teacher_mine.xml  (+5 more)
gradle/wrapper/: gradle-wrapper.properties
(+110 files in other folders)
